# U3D

Director/Dino/: Dino.glb
Director/Director8.5_Doc\/director85-help/: _helpDocs.js  fileurls.ser
Director/Director8.5_Doc\/director85-help/DirectorHelp/html/: 00_intro2.html  00_intro3.html  00_intro5.html  01_Lingo_by_feature10.html  01_Lingo_by_feature14.html  01_Lingo_by_feature15.html  01_Lingo_by_feature16.html  01_Lingo_by_feature17.html  01_Lingo_by_feature19.html  01_Lingo_by_feature2.html  01_Lingo_by_feature20.html  01_Lingo_by_feature21.html  01_Lingo_by_feature23.html  01_Lingo_by_feature24.html  01_Lingo_by_feature29.html  01_Lingo_by_feature31.html  01_Lingo_by_feature32.html  01_Lingo_by_feature36.html  01_Lingo_by_feature37.html  01_Lingo_by_feature39.html  01_Lingo_by_feature4.html  01_Lingo_by_feature42.html  01_Lingo_by_feature44.html  01_Lingo_by_feature45.html  01_Lingo_by_feature47.html  01_Lingo_by_feature48.html  01_Lingo_by_feature49.html  01_Lingo_by_feature5.html  01_Lingo_by_feature51.html  01_Lingo_by_feature7.html  01_Lingo_by_feature9.html  01_guidedtour10.html  01_guidedtour11.html  01_guidedtour13.html  01_guidedtour15.html  01_guidedtour16.html  01_guidedtour5.html  01_guidedtour6.html  02_Lingo_a_to_c105.html  02_Lingo_a_to_c106.html  (+1046 more)
Director/Director8.5_Doc\/director85-help/DirectorHelp/html/movies/: flash_events.dcr  frame_by_frame.dcr  ink_effects.dcr  keyframe_curve.dcr  keyframe_drag.dcr  sprite_rotation.dcr  tween_color.dcr
Samples&Docs/3d/: 3d.glb  3d.mtl
Samples&Docs/Dino/: Dino.mtl
Samples&Docs/Director8.5_Doc\/director85-help/: Novell Documentation.url  filedata.ser  help.map  search.htm
Samples&Docs/Director8.5_Doc\/director85-help/DirectorHelp/: ContextHelp.htm  contextID.html  nosearch.html
Samples&Docs/Director8.5_Doc\/director85-help/DirectorHelp/html/: 00_intro1.html  00_intro4.html  01_Lingo_by_feature1.html  01_Lingo_by_feature11.html  01_Lingo_by_feature12.html  01_Lingo_by_feature13.html  01_Lingo_by_feature18.html  01_Lingo_by_feature22.html  01_Lingo_by_feature25.html  01_Lingo_by_feature26.html  01_Lingo_by_feature27.html  01_Lingo_by_feature28.html  01_Lingo_by_feature3.html  01_Lingo_by_feature30.html  01_Lingo_by_feature33.html  01_Lingo_by_feature34.html  01_Lingo_by_feature35.html  01_Lingo_by_feature38.html  01_Lingo_by_feature40.html  01_Lingo_by_feature41.html  01_Lingo_by_feature43.html  01_Lingo_by_feature46.html  01_Lingo_by_feature50.html  01_Lingo_by_feature6.html  01_Lingo_by_feature8.html  01_guidedtour1.html  01_guidedtour12.html  01_guidedtour14.html  01_guidedtour17.html  01_guidedtour2.html  01_guidedtour3.html  01_guidedtour4.html  01_guidedtour7.html  01_guidedtour8.html  01_guidedtour9.html  02_Lingo_a_to_c1.html  02_Lingo_a_to_c10.html  02_Lingo_a_to_c100.html  02_Lingo_a_to_c101.html  02_Lingo_a_to_c102.html  (+1085 more)
Samples&Docs/Director8.5_Doc\/director85-help/DirectorHelp/html/movies/: flash_lingo.dcr  lingo_wait_cuepoint.dcr  sprite_skewing.dcr  vector_shapes.dcr
U3D_OLD/Docs/IntermediateFormat/: IDTF Format Description.doc
U3D_OLD/Source/RTL/Platform/Mac32/Common/: IFXOSLoader.cpp
U3D_OLD/Source/Samples/winXPlayer/: CMakeLists.txt  U3DViewerX.cpp  u3dplayer.cpp  u3dplayer.h  xplayer.cpp
U3D_OLD/Source/Tests/TestSystem/Tools/trun/: trun.vcproj
U3D_OLD/Source/Tests/UnitTesting/Loading/SampleLoadingMetaData/: SampleLoadingMetaData.h
U3D_OLD/Source/Tests/UnitTesting/Loading/SampleLoadingNonAtom/: SampleLoadingNonAtom.h
U3D_OLD/Source/Tests/UnitTesting/Textures/SampleTexture/: SampleTexture.cpp
u3d_MODERN/: CMakeLists.txt  ins.sh
u3d_MODERN/RTL/Component/Mesh/: CIFXMesh.cpp
u3d_MODERN/RTL/Component/Rendering/: CIFXRender.cpp  CIFXRenderContext.cpp
u3d_MODERN/RTL/Component/SceneGraph/: CIFXDevice.cpp
u3d_MODERN/RTL/Platform/Lin32/IFXRendering/OpenGL/: CIFXRenderOGLOS.cpp
